--- a/Testing/pom.xml
+++ b/Testing/pom.xml
@@ -52,6 +52,11 @@
 			<version>2.4</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>pl.pragmatists</groupId>
+			<artifactId>JUnitParams</artifactId>
+			<version>1.0.5</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
