Integrated JMeter with Maven build.

--- a/Testing/pom.xml
+++ b/Testing/pom.xml
@@ -126,6 +126,25 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>com.lazerycode.jmeter</groupId>
+				<artifactId>jmeter-maven-plugin</artifactId>
+				<version>2.0.3</version>
+				<executions>
+					<execution>
+						<id>jmeter-tests</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>jmeter</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<jmeterExtensions>
+						<artifact>com.avinash.learn:Testing:1.0.0</artifact>
+					</jmeterExtensions>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
